Updated Solutions page and subpage styles. Menu fixes, mobile treatment, and width gap code added.

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -667,6 +667,9 @@
   .category-list-entry:nth-child(odd) {
     clear: both;
   }
+  .category-list-entry.span5 {
+    width: 380px;
+  }
   .dropdown-menu > li > a {
     display: block;
     padding: 3px 10px;
@@ -1362,9 +1365,9 @@
     border: none;
     max-width: 100%;
     font-size: 23px;
-    margin-top: 14%;
+    margin-top: 16%;
     position: relative;
-    line-height: 26px;
+    line-height: 21px;
   }
   .category-list-entry {
     text-align: center;
@@ -1382,9 +1385,43 @@
     max-width: 44px;
     right: 45%;
     margin-left: -25%;
-    top: 13%;
+    top: 17%;
   }
   .category-list-entry a.button-flatgrey {
+    display: none;
+  }
+  .breadcrumbs {
+    display: none;
+  }
+  h1.title {
+    font-size: 19px;
+    text-align: center;
+    background: url(../img/arrow-down.png) no-repeat right 25%;
+    padding-right: 23px;
+    font-weight: normal;
+    display: inline-block;
+    position: relative;
+    left: 23px;
+  }
+  .page-header {
+    text-align: center;
+    position: relative;
+    width: 106%;
+    left: -3%;
+  }
+  .row {
+    text-align: center;
+    padding: 0 20px;
+  }
+  a.read-more,
+  a.read-less {
+    margin: 0 auto;
+    width: 40%;
+    border-radius: 0;
+    margin: 20px auto 50px auto;
+    padding: 2px 10px;
+  }
+  .category-listing-label {
     display: none;
   }
   /* ==========================================================================
@@ -1704,6 +1741,7 @@
   }
   #menu-primary-navigation-2 {
     background: #F8F9FB;
+    text-transform: uppercase;
   }
   .nav-collapse .nav li.menu-alteva-communications {
     float: left;
@@ -2079,9 +2117,9 @@
     border: none;
     max-width: 100%;
     font-size: 23px;
-    margin: 17% auto 0 auto;
+    margin: 23% auto 0 auto;
     position: relative;
-    line-height: 26px;
+    line-height: 21px;
     max-width: 92%;
   }
   .category-list-entry {
@@ -2100,10 +2138,92 @@
     max-width: 44px;
     right: 45%;
     margin-left: -25%;
-    top: 13%;
+    top: 17%;
   }
   .category-list-entry a.button-flatgrey {
     display: none;
+  }
+  .breadcrumbs {
+    display: none;
+  }
+  h1.title {
+    font-size: 19px;
+    text-align: center;
+    background: url(../img/arrow-down.png) no-repeat right 25%;
+    padding-right: 23px;
+    font-weight: normal;
+    display: inline-block;
+    position: relative;
+    left: 23px;
+  }
+  .row {
+    text-align: center;
+    padding: 0 20px;
+  }
+  .page-header {
+    text-align: center;
+    position: relative;
+    width: 106%;
+    left: -3%;
+  }
+  a.read-more,
+  a.read-less {
+    margin: 0 auto;
+    width: 40%;
+    border-radius: 0;
+    margin: 20px auto 50px auto;
+    padding: 2px 10px;
+  }
+  .category-listing-label {
+    display: none;
+  }
+  footer a.get-started {
+    float: none;
+    width: 100%;
+    display: inline-block;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 13px 14px;
+    text-align: center;
+    position: relative;
+    top: -17px;
+  }
+  footer a.get-started.desktop {
+    display: none;
+  }
+}
+@media (min-width: 370px) and (max-width: 667px) {
+  .category-list-entry h3 {
+    margin-top: 15%;
+  }
+  .category-list-entry {
+    width: 100%;
+    float: none;
+  }
+  #whyCloud,
+  #services,
+  #whyAlteva {
+    width: 100%;
+    margin: 0;
+    border: #dddee0 solid;
+    border-width: 1px 0 0 0;
+    width: 90%;
+    background-position: 10px 50% !important;
+    padding: 20px 0 20px 70px;
+    text-align: left;
+    position: relative;
+    left: -10px;
+  }
+  #whyAlteva {
+    border-width: 1px 0;
+  }
+  .sidebar-content {
+    border: none;
+  }
+  .mobile-center {
+    width: 100%;
+    left: 0;
+    margin: 45px auto 0 10%;
   }
 }
 @media (max-width: 480px) {
@@ -2187,6 +2307,73 @@
   }
   #partners a {
     display: none;
+  }
+  #whyCloud,
+  #services,
+  #whyAlteva {
+    width: 100%;
+    margin: 0;
+    border: #dddee0 solid;
+    border-width: 1px 0 0 0;
+    width: 90%;
+    background-position: 10px 50% !important;
+    padding: 20px 0 20px 70px;
+    text-align: left;
+    position: relative;
+    left: -10px;
+  }
+  #whyAlteva {
+    border-width: 1px 0;
+  }
+  .sidebar-content {
+    border: none;
+  }
+  .mobile-center {
+    width: 100%;
+    left: 0;
+    margin: 45px auto 0 10%;
+  }
+  #menu-primary-navigation-2 {
+    width: 100%;
+    margin-bottom: 0;
+  }
+  #menu-primary-navigation > li > a,
+  #menu-primary-navigation-2 > li > a {
+    text-align: left;
+    padding: 15px;
+    font-size: 16px;
+    text-transform: uppercase;
+  }
+  .nav-collapse .top-mobile > ul > li > a,
+  .nav-collapse .top-mobile > ul > li > ul > li > a {
+    border: none;
+    text-align: left;
+    padding: 12px 20px;
+  }
+  .nav-collapse .nav li.menu-alteva-communications {
+    border-right: 1px solid #cbd2d8;
+    width: 49.5%;
+  }
+  nav.top-mobile {
+    width: 100%;
+  }
+  footer .nav-collapse .top-mobile > ul > li.last {
+    width: 49.5%;
+  }
+  footer a.get-started {
+    margin-top: 0;
+    float: none;
+    width: 100%;
+    display: inline-block;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 13px 14px;
+  }
+  footer a.get-started.desktop {
+    display: none;
+  }
+  #footer .row3 {
+    padding: 0;
   }
 }
 @media (max-width: 1079px) {
