--- a/assets/less/responsive-768px-1079px.less
+++ b/assets/less/responsive-768px-1079px.less
@@ -197,9 +197,9 @@
 		border:none;
 		max-width:100%;
 		font-size: 23px;
-		margin-top:14%;
+		margin-top:16%;
 		position: relative;;
-		line-height: 26px;
+		line-height: 21px;
 	}
 
 	.category-list-entry {
@@ -219,10 +219,50 @@
 		max-width:44px;
 		right:45%;
 		margin-left:-25%;
-		top:13%;
+		top:17%;
 	}
 
 	.category-list-entry a.button-flatgrey {
+		display: none;
+	}
+
+	.breadcrumbs {
+		display: none;
+	}
+
+	h1.title {
+		font-size: 19px;
+		text-align: center;
+		background: url(../img/arrow-down.png) no-repeat right 25%;
+		padding-right:23px;
+		font-weight:normal;
+		display: inline-block;
+		position: relative;
+		left:23px;
+	}
+
+	.page-header {
+		text-align: center;
+		position: relative;
+		width:106%;
+		left:-3%;
+	}
+
+	.row {
+		text-align: center;
+		padding:0 20px;
+	}
+
+	a.read-more,
+	a.read-less {
+		margin:0 auto;
+		width: 40%;
+		border-radius:0;
+		margin:20px auto 50px auto;
+		padding:2px 10px;
+	}
+
+	.category-listing-label {
 		display: none;
 	}
 
